--- a/Views/_ViewStart.cshtml
+++ b/Views/_ViewStart.cshtml
@@ -1,3 +1,10 @@
 ﻿@{
-    Layout = "_Layout";
+    @if (User.Identity.IsAuthenticated) //Authenticated 
+    {
+        Layout = "_AdminLayout";
+    }
+    else
+    {
+        Layout = "_HomeLayout";
+    }
 }
