CRUD movie, genre, ...

--- a/Views/Shared/_Welcome.cshtml
+++ b/Views/Shared/_Welcome.cshtml
@@ -1,8 +1,6 @@
 ﻿@if (User.Identity.IsAuthenticated)
 {
-    foreach(var claim in User.Claims){
-    <p>@claim.Value</p>
-    }
+    <a>@User.Claims.First().Value</a>
 }
 else
 {
