--- a/Views/Movie/Create.cshtml
+++ b/Views/Movie/Create.cshtml
@@ -24,7 +24,7 @@
                                 </select>
                             </div>
                             <div class="mb-3">
-                                <label asp-for="Title">Genre</label>
+                                <label asp-for="GenreId">Genre</label>
                                 <select class="form-select" asp-for="GenreId" asp-items="@Model.MovieGenre">
                                 </select>
                             </div>
