--- a/Views/Shared/_AdminLayout.cshtml
+++ b/Views/Shared/_AdminLayout.cshtml
@@ -53,6 +53,14 @@
                             </a>
                         </li>
                         <li class="sidebar-item">
+                            <a class="sidebar-link" asp-controller="Post" asp-action="Index" aria-expanded="false">
+                                <span>
+                                    <i class="ti ti-typography"></i>
+                                </span>
+                                <span class="hide-menu">Post</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
                             <a class="sidebar-link" asp-controller="Genre" asp-action="Index" aria-expanded="false">
                                 <span>
                                     <i class="ti ti-alert-circle"></i>
@@ -74,14 +82,6 @@
                                     <i class="ti ti-file-description"></i>
                                 </span>
                                 <span class="hide-menu">Cast</span>
-                            </a>
-                        </li>
-                        <li class="sidebar-item">
-                            <a class="sidebar-link" href="./ui-typography.html" aria-expanded="false">
-                                <span>
-                                    <i class="ti ti-typography"></i>
-                                </span>
-                                <span class="hide-menu">Keyword</span>
                             </a>
                         </li>
                         @if(!User.Identity.IsAuthenticated){
