--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -53,7 +53,7 @@
                                     {
                                     <div class="col-lg-3 col-sm-6">
                                                     <div class="item">
-                                                        <img src="~/images/movies/@item.Image" alt="">
+                                                        <img width="20" src="~/images/movies/@item.Image" alt="">
                                                     <h4><a href="">@item.Title</a></h4>
                                                         <div class="sub-title">
                                                         <p>Sandbox</p>
